; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/extr_dma.c_dma64_dd_parity.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/extr_dma.c_dma64_dd_parity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dma64desc = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dma64desc*)* @dma64_dd_parity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dma64_dd_parity(%struct.dma64desc* %0) #0 {
  %2 = alloca %struct.dma64desc*, align 8
  store %struct.dma64desc* %0, %struct.dma64desc** %2, align 8
  %3 = load %struct.dma64desc*, %struct.dma64desc** %2, align 8
  %4 = getelementptr inbounds %struct.dma64desc, %struct.dma64desc* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.dma64desc*, %struct.dma64desc** %2, align 8
  %7 = getelementptr inbounds %struct.dma64desc, %struct.dma64desc* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = xor i32 %5, %8
  %10 = load %struct.dma64desc*, %struct.dma64desc** %2, align 8
  %11 = getelementptr inbounds %struct.dma64desc, %struct.dma64desc* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = xor i32 %9, %12
  %14 = load %struct.dma64desc*, %struct.dma64desc** %2, align 8
  %15 = getelementptr inbounds %struct.dma64desc, %struct.dma64desc* %14, i32 0, i32 3
  %16 = load i32, i32* %15, align 4
  %17 = xor i32 %13, %16
  %18 = call i32 @parity32(i32 %17)
  ret i32 %18
}

declare dso_local i32 @parity32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
